--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>7.1.0</version>
         </dependency>
 
+        <!-- for extracting json as pojo -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.2</version>
+        </dependency>
+
     </dependencies>
 
 
